--- a/FlaskApp/TechTogether_Twitter_API.ipynb
+++ b/FlaskApp/TechTogether_Twitter_API.ipynb
@@ -6,7 +6,7 @@
       "name": "TechTogether Twitter API",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9uLTqxr/MPqE85fX5Ksin",
+      "authorship_tag": "ABX9TyM+GpVsXZY/2A42XwZHQkRo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,7 +98,7 @@
         "    tweet_text=\"\"\n",
         "    for tweet in tweets:\n",
         "      if (not tweet.retweeted) and ('RT @' not in tweet.text):\n",
-        "        tweet_text+= p.clean(tweet.text)+\"|||\" \n",
+        "        tweet_text+= p.clean(tweet.text)+\" \" \n",
         "\n",
         "    tweet_text = re.sub(r'^https?:\\/\\/.*[\\r\\n]*', '', tweet_text, flags=re.MULTILINE)\n",
         "    # Creation of dataframe from tweets list\n",
