--- a/FlaskApp/TechTogether_Twitter_API.ipynb
+++ b/FlaskApp/TechTogether_Twitter_API.ipynb
@@ -6,7 +6,7 @@
       "name": "TechTogether Twitter API",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+GpVsXZY/2A42XwZHQkRo",
+      "authorship_tag": "ABX9TyNP80GMdBrdcMPMma7VmbFe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/catekat16/TechTogetherTeam/blob/ketki/FlaskApp/TechTogether_Twitter_API.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/catekat16/TechTogetherTeam/blob/main/FlaskApp/TechTogether_Twitter_API.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -82,10 +82,10 @@
       "source": [
         "def get_tweets(username, count):\n",
         "  try:     \n",
-        "    consumer_key = \"6rJdQdSsGuNyN7LHU4m8FSOyd\"\n",
-        "    consumer_secret = \"Y7VzssVbbcgveRRN5uzUAykc2LaJHcF9nOwMLq6rp6ZXMejpGV\"\n",
-        "    access_token = \"732826401431248896-FYmrCvcNNFs3GxedIHCXx1kDRR0aLqx\"\n",
-        "    access_token_secret = \"fNJFeuNJZ6Yg3q7UsbiquzXc5qprCx2IOvwHXJUkZhHbf\"\n",
+        "    consumer_key = \"Hidden\"\n",
+        "    consumer_secret = \"Hidden\"\n",
+        "    access_token = \"Hidden\"\n",
+        "    access_token_secret = \"Hidden\"\n",
         "\n",
         "    auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
         "    auth.set_access_token(access_token, access_token_secret)\n",
